Fix invisible folder name

The folder name becomes invisible because parent view's layer is set not
drawn [1]. This CL sets folder header view's own layer to fix the issue.

[1] https://chromium-review.googlesource.com/c/chromium/src/+/1302413

Bug: 902920
Change-Id: Ib32d3c55d8e044693f81e8bfae7547b989c1c80d
Reviewed-on: https://chromium-review.googlesource.com/c/1330762
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607333}
Former-commit-id: 8091fdc6efbc67b7edde2be63c5434017aabcf0d